k8s-ingress-traefik/base/traefik/middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: latency-check-foo
  namespace: default
spec:
  circuitBreaker:
    expression: LatencyAtQuantileMS(50.0) > 100

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: latency-check-bar
  namespace: default
spec:
  circuitBreaker:
    expression: LatencyAtQuantileMS(50.0) > 100

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: modify-header
  namespace: default
spec:
  headers:
    customRequestHeaders:
      X-Script-Name: "test"
    customResponseHeaders:
      X-Custom-Response-Header: "value"
