k8s-ingress-traefik/base/traefik/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: traefik-ingress-router
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-router
      containers:
        - name: traefik
          image: traefik:v2.3
          args:
            - --api
            - --api.insecure
            - --entrypoints.web.address=:80
            - --providers.kubernetescrd
            # Metrics https://doc.traefik.io/traefik/observability/metrics/prometheus/
            - --entryPoints.metrics.address=:8082
            - --metrics.prometheus.entryPoint=metrics
            - --metrics.prometheus=true
          ports:
            - name: web
              containerPort: 80
            - name: admin
              containerPort: 8080
            - name: metrics
              containerPort: 8082
