k8s-ingress-traefik/base/traefik/go-http-api.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: go-http-api
  namespace: traefik-ingress-router
  labels:
    app: myapp
    name: go-http-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      task: go-http-api
  template:
    metadata:
      labels:
        app: myapp
        task: go-http-api
    spec:
      containers:
        - name: go-http-api
          image: kenju/go-http-api
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: go-http-api
  namespace: traefik-ingress-router
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: myapp
    task: go-http-api

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: go-http-api-staging
  namespace: traefik-ingress-router
  labels:
    app: myapp
    name: go-http-api-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      task: go-http-api-staging
  template:
    metadata:
      labels:
        app: myapp
        task: go-http-api-staging
    spec:
      containers:
        - name: go-http-api-staging
          image: kenju/go-http-api
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: go-http-api-staging
  namespace: traefik-ingress-router
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: myapp
    task: go-http-api-staging
