k8s-ingress-traefik/base/traefik/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-router
  namespace: traefik-ingress-router
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/go`)
      kind: Rule
      services:
      - kind: TraefikService
        name: mirroring-go-api
      middlewares:
        - name: modify-header
    - match: PathPrefix(`/foo`) && Query(`foo=bar`)
      kind: Rule
      services:
      - kind: Service
        name: whoami
        passHostHeader: true
        port: 80
      middlewares:
        - name: modify-header
        - name: latency-check-easy
    - match: PathPrefix(`/bar`)
      kind: Rule
      services:
      - kind: Service
        name: whoami
        passHostHeader: true
        port: 80
      middlewares:
        - name: modify-header
        - name: latency-check-easy
    - match: PathPrefix(`/end`)
      kind: Rule
      services:
      - kind: Service
        name: whoami
        passHostHeader: true
        port: 80
      middlewares:
        - name: latency-check-harsh
