k8s-ingress-traefik/base/traefik/ingress.yaml
# NOTE: IngressRoute PoC
# https://doc.traefik.io/traefik/routing/providers/kubernetes-crd/
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/go`)
      kind: Rule
      services:
      - kind: Service
        name: go-http-api
        port: 8080
      middlewares:
        - name: modify-header
    - match: PathPrefix(`/foo`)
      kind: Rule
      services:
      - kind: Service
        name: whoami
        passHostHeader: true
        port: 80
      middlewares:
        - name: modify-header
        - name: latency-check
        - name: add-prefix
    - match: PathPrefix(`/bar`)
      kind: Rule
      services:
      - kind: Service
        name: whoami
        passHostHeader: true
        port: 80
      middlewares:
        - name: modify-header
        - name: latency-check
        - name: add-prefix
